test/files/neg/t5152.check
t5152.scala:7: error: kinds of the type arguments (Test.B) do not conform to the expected kinds of the type parameters (type E) in class A.
Test.B's type parameters do not match type E's expected parameters:
type E has 1 type parameter, but type _ has 0
  class B[E[_]] extends A[B] { }  // B is depth 2 but A requires 1
                        ^
t5152.scala:11: error: kinds of the type arguments (Test.B1) do not conform to the expected kinds of the type parameters (type E) in class A1.
Test.B1's type parameters do not match type E's expected parameters:
type _ has no type parameters, but type G has 1
  class B1[E[_]] extends A1[B1]   // B1 is depth 2 but A1 requires 3
                         ^
2 errors
